Fix warnings in libwebrtc build https://bugs.webkit.org/show_bug.cgi?id=168088

Reviewed by Youenn Fablet.

* Source/third_party/opus/src/src/opus_decoder.c:
Silence a warning.  Debug builds of opus can be slow.  No big deal.
* libwebrtc.xcodeproj/project.pbxproj:
More sdk files need ARC.



Canonical link: https://commits.webkit.org/185114@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212001 268f45cc-cd09-0410-ab3c-d52691b4dbfc